Added new API with Set and List parameters
